# gnome-shell-appgrid-uninstall

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  meson.build  meson_options.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DISTRIBUTION.md  GNOME-EXTENSIONS-SUBMISSION.md  INSTALL.md  PPA-GUIDE.md  RELEASE.md
extension/: appGridMenu.js  confirmDialog.js  extension.js  meson.build  metadata.json  notificationHandler.js  packageDetector.js  prefs.js  systemAppGuard.js  uninstallManager.js
extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.appgrid-uninstall.gschema.xml
helper/: meson.build
helper/data/: org.gnome.AppGridUninstall.policy  org.gnome.AppGridUninstall.service  org.gnome.AppGridUninstall.xml
helper/src/: main.c  package_ops.c  package_ops.h  polkit_auth.c
packaging/: make_zip.sh
packaging/debian/: changelog  control  install
packaging/rpm/: gnome-shell-appgrid-uninstall.spec
schemas/: extension-schemas-link
tests/fixtures/: mock_apps.json
tests/integration/: run_all.sh  test_apt_uninstall.sh  test_flatpak_uninstall.sh  test_snap_uninstall.sh
tests/unit/: run_all.js  test_packageDetector.js  test_systemAppGuard.js  test_uninstallManager.js  testlib.js
